--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "bower-asset/select2": ">=4.0.0",
+        "conquer/select2": "*"
     },
     "autoload": {
         "psr-4": {
